# agent-portfolio

./: .gitignore  progress.md  readme.md  skills.md
stages/00-foundation/python-agent-starter/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
stages/00-foundation/python-agent-starter/docs/: architecture.md  postmortem-env-missing.md
stages/00-foundation/python-agent-starter/scripts/: run.sh
stages/00-foundation/python-agent-starter/src/app/: cli.py  config.py  version.py
stages/00-foundation/python-agent-starter/src/common/: errors.py  logging_utils.py
stages/00-foundation/python-agent-starter/tests/: test_cli.py  test_config.py
stages/01-python-engineering/python-agent-starter/: .env.example  README.md  pyproject.toml
stages/01-python-engineering/python-agent-starter/docs/: postmortem.md
stages/01-python-engineering/python-agent-starter/src/common/: errors.py  (+1 more)
stages/01-python-engineering/python-agent-starter/tests/: test_http_client.py
stages/02-llm-tool-calling/python-agent-starter/: .env.example  .gitignore  README.md  pyproject.toml
stages/02-llm-tool-calling/python-agent-starter/docs/: architecture.md  postmortem-json-parse.md
stages/02-llm-tool-calling/python-agent-starter/evals/: run_eval.py
stages/02-llm-tool-calling/python-agent-starter/reports/: eval_report.md
stages/02-llm-tool-calling/python-agent-starter/scripts/: eval.sh  run.sh  test.sh
stages/02-llm-tool-calling/python-agent-starter/tests/: test_eval_runner.py  test_json_guard.py  test_orchestrator.py  test_tool_registry.py
(+125 files in other folders)
